Changes log  
===========

- @version-full@ (@release-date@)
    - API changes
      - Moved SslContextFactory and DefaultSslContextFactory classes from 
        internal to public org.restlet.ext.ssl package.
      - Renamed Status#getName() method to getReasonPhrase() for more clarity
        regarding the purpose of the additional "description" property used
        for lengthier explanations.
    - Enhancements
      - Updated and consolidated the SSL/HTTPS configuration parameters
        for all HTTPS connectors.
      - Added a warning message to indicate that an application without a 
        parent component can't handle outbound calls by default.
        Reported by John Logdson and Kristoffer Gronowski. 
    - Bug fixed
      - Fixed compatibility issue with GWT 2.3.
      - Fixed potential NPE in Restlet class when no context is available.
      - Fixed potential NPE in LogFilter. Reported by Aaron Summers.
      - Fixed parsing of HTTP requests with internal connector when the
        Host header was missing. Now falling back to IP address.
        Reported by Aaron Summers.
      - Fixed misleading log message when response are manually ranged
        (206 status and entity with range set). Reported by John Logsdon.
      - Fixed issue causing blocking of internal HTTP/SIP connector when 
        the entity was coming from Apache HTTP client.
      - Fixed issue causing potential loop in internal HTTP/SIP client
        when the response entity wasn't being consumed immediately.
      - Fixed issue causing potential IndexOutOfBounds exceptions.
    - Misc
      - Updated Jetty to version 7.4.2.
      - Added awaitility and hamcrest libraries required by the oauth 
        extension.

- 2.1 Milestone 4 (04/27/2011)
    - API changes
      - Added protected redirect(...) and retry(...) methods on on ClientResource
        to facilitate extension of default behavior such as passing on cookies.
        Suggested by Martin Svensson.